Mon Oct 19 20:58:10 UTC 2009  Olli Savia  <ops@iki.fi>

        * configure.ac:
        * m4/config_h.m4:
          Added a check for strsignal.

Mon Oct 19 20:24:54 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/README:
        * ace/config-cray.h:
        * ace/config-cygwin32.h:
        * ace/config-hpux-11.00.h:
        * ace/config-lynxos.h:
        * ace/config-netbsd.h:
        * ace/config-openbsd.h:
        * ace/config-rtems.h:
        * configure.ac:
        * m4/config_h.m4:
          ACE_HAS_SYS_ERRLIST is no longer in use.

Mon Oct 19 19:25:40 UTC 2009  Olli Savia  <ops@iki.fi>

        * ace/README:
        * ace/config-aix-5.x.h:
        * ace/config-cray.h:
        * ace/config-cygwin32.h:
        * ace/config-freebsd.h:
        * ace/config-hpux-11.00.h:
        * ace/config-integritySCA.h:
        * ace/config-irix6.x-common.h:
        * ace/config-linux-common.h:
        * ace/config-lynxos.h:
        * ace/config-macosx-leopard.h:
        * ace/config-macosx-panther.h:
        * ace/config-macosx-tiger.h:
        * ace/config-macosx.h:
        * ace/config-mvs.h:
        * ace/config-netbsd.h:
        * ace/config-openbsd.h:
        * ace/config-openvms.h:
        * ace/config-qnx-neutrino.h:
        * ace/config-qnx-rtp-62x.h:
        * ace/config-qnx-rtp-pre62x.h:
        * ace/config-rtems.h:
        * ace/config-sco-5.0.0.h:
        * ace/config-sunos5.4-g++.h:
        * ace/config-sunos5.4-sunc++-4.x.h:
        * ace/config-sunos5.5.h:
        * ace/config-tandem-nsk-mips-v2.h:
        * ace/config-tandem-nsk-mips-v3.h:
        * ace/config-tandem.h:
        * ace/config-tru64.h:
        * ace/config-unixware-7.1.0.h:
        * ace/config-unixware-7.1.0.udk.h:
        * ace/config-vxworks6.4.h:
        * ace/config-win32-borland.h:
        * ace/config-win32-cegcc.h:
        * ace/config-win32-dmc.h:
        * ace/config-win32-ghs.h:
        * ace/config-win32-interix.h:
        * ace/config-win32-mingw.h: