@@ -88,7 +88,6 @@
 #define ACE_HAS_STRING_CLASS
 #define ACE_HAS_SYSCTL
 #define ACE_HAS_SYS_FILIO_H
-#define ACE_HAS_SYS_SIGLIST
 #define ACE_HAS_SYS_SOCKIO_H
 #define ACE_HAS_TERMIOS
 #define ACE_HAS_TIMEZONE_GETTIMEOFDAY
